@@ -1,3 +1,10 @@
+2001-05-12  Alan Modra  <amodra@one.net.au>
+
+	* gas/i386/sse2.s: Correct cvtps2dq, movdq2q, and movq2dq
+	* gas/i386/sse2.d: Likewise.  Fix pmuludq too.
+
+	* gas/i386/ssemmx2.d: Correct movq.
+
 2001-05-04  Alan Modra  <amodra@one.net.au>
 
 	* gas/i386/katmai.d: Correct pmovmskb and pextrw opcodes.
